# vysma-editor

./: .env  Cargo.toml  INPUT_BINDING_GUIDE.md  Justfile  MOBA_MODULAR_SYSTEM.md  android_build.sh  ios_build.sh
.cargo/: config.toml
.github/workflows/: ci.yml
assets/hcl_examples/: complex_example.hcl  example.hcl
assets/moba_hcl/: moba_game.hcl  player.hcl
assets/moba_hcl/heroes/: axe.hcl
assets/scenes/: complex_example.hcl  example.hcl  moba_core.hcl  moba_game.hcl
certificates/: cert.pem  digest.txt  key.pem
crates/vysma/: Cargo.toml
crates/vysma-app/: Cargo.toml
crates/vysma-app/src/: input_binding.rs  lib.rs  protocol.rs  renderer.rs  shared.rs
crates/vysma-app/src/client/: mod.rs
crates/vysma-app/src/common/: cli.rs  mod.rs  renderer.rs  server_network.rs  shared.rs
crates/vysma-app/src/common/cli/: log.rs  spawn.rs  window.rs
crates/vysma-app/src/editor/: auth.rs
crates/vysma-app/src/protocol/: components.rs  inputs.rs  mod.rs
crates/vysma-app/src/server/: mod.rs
crates/vysma-cloud/: Cargo.toml
crates/vysma-cloud/src/: jwt.rs  lib.rs
crates/vysma-hcl/: Cargo.toml
crates/vysma-hcl/src/: lib.rs
crates/vysma-hcl/src/hcl/: loader.rs  module_loader.rs  module_registry.rs  net.rs  overlay.rs  registry.rs  remote.rs  runtime.rs  schema.rs  spawn.rs  types.rs
crates/vysma-net/: Cargo.toml
crates/vysma-net/src/: client.rs  lib.rs  server.rs  shared.rs
crates/vysma-platform/: Cargo.toml
crates/vysma-platform/src/: android_asset_io.rs  app_view.rs  lib.rs
crates/vysma-platform/src/app_view/: android.rs  ios.rs  mod.rs
crates/vysma-platform/src/ffi/: android.rs  ios.rs  mod.rs
crates/vysma/src/: main.rs  util.rs
crates/vysma/src/commands/: auth.rs  client.rs  mod.rs  new.rs  preview.rs  serve.rs
crates/vysma/src/commands/module/: common.rs  mod.rs  publish.rs  schema.rs
crates/vysma/templates/basic/: README.md
crates/vysma/templates/basic/assets/: main.hcl
crates/vysma/templates/editor_game/: Cargo.toml  README.md
crates/vysma/templates/editor_game/assets/: main.hcl
crates/vysma/templates/editor_game/assets/scenes/: editor_demo.hcl
crates/vysma/templates/editor_game/src/: main.rs
docs/: DEV_SETUP.md  README.md  appwrite-integration.md  architecture-plan.md  editor-ui.md  execution-plan.md  hcl-cheatsheet.md  hcl-cookbook.md  hcl-ez-mode.md  hcl-spec.md  http-asset-io.md  module-registry.md  relay-discovery.md  repo-refactor-plan.md
docs/hcl-example/moba/: README.md  abilities.hcl  ez.hcl  input.hcl  scene.hcl  server.hcl
docs/hcl-example/moba/modules/: moba_core.hcl
iOS/bevy_in_iOS.xcodeproj/: project.pbxproj
iOS/bevy_in_iOS.xcodeproj/project.xcworkspace/xcuserdata/nam.xcuserdatad/: UserInterfaceState.xcuserstate
scripts/: check_appwrite.rs  populate_modules.rs
src/: breakout_game.rs  input_binding.rs  lib.rs  main.rs  protocol.rs  renderer.rs
src/client/: mod.rs
src/common/: cli.rs  client_network.rs  mod.rs  renderer.rs  shared.rs
src/ffi/: ios.rs
src/hcl/: loader.rs  moba_components.rs  mod.rs  module_loader.rs  module_marketplace.rs  module_registry.rs  net.rs  overlay.rs  registry.rs  runtime.rs  schema.rs  spawn.rs  types.rs
src/server/: mod.rs
test-auto-discovery/: README.md
test-auto-discovery/assets/scenes/: example.hcl
tests/: hcl_parse.rs
