[package]
name = "bevy-in-app"
version = "0.4.0"
authors = ["jinleili"]
edition = "2024"
rust-version = "1.85"

[workspace.metadata.rustflags]
# 禁用 unexpected_cfgs 检查，解决 objc crate 的警告
RUSTFLAGS = "--cfg=unexpected_cfgs"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
client = ["lightyear/client", "gui"]
default = ["bevy_debug_stepping", "client", "server", "gui"]
bevy_debug_stepping = ["bevy/bevy_debug_stepping"]
server = ["lightyear/server", "udp"]
udp = ["lightyear/udp"]

# Optional toggle to enable remote asset helpers (future use)
remote_assets = []

gui = [
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_pbr",
    "bevy/bevy_scene",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gizmos",
    "bevy/tonemapping_luts",
    "bevy/smaa_luts",
    "bevy/default_font",
    "bevy/png",
    "bevy/jpeg",
    "bevy/hdr",
    "bevy/x11",
    "bevy/webgl2",
    "bevy/bevy_winit",
    "bevy/bevy_picking",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_ui_picking_backend",
    "bevy/bevy_window",
]

[dependencies]
ahash = "0.8"
smallvec = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
# hcl-rs = { version = "0.19.2" }
libc = "*"
raw-window-handle = "0.6"
wgpu = "24"
bevy = { version = "0.16", default-features = true }
bevy_platform = { version = "0.16.0" }
bevy_tasks = { version = "0.16.0" }
uuid = { version = "1.13", features = ["v4"] }
log = "0.4"
lightyear = { version = "0.22.5", features = [
    "input_native",
    "interpolation",
    "prediction",
    "replication",
    "udp",
    "webtransport",
    "webtransport_self_signed",
    "webtransport_dangerous_configuration",
    "netcode",
] }


serde = { version = "1", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1"
once_cell = "1.19"

async-compat = "0.2.3"
tracing = "0.1.40"
clap = { version = "4.5.4", features = ["derive"] }
bevy-inspector-egui = { version = "0.32", default-features = false, features = [
    "bevy_pbr",
    "bevy_image",
    "bevy_render",
    "egui_open_url",
] }
cfg-if = "1.0"
rand = "0.9.2"
hcl-rs = "0.19.2"
anyhow = "1"
sha2 = "0.10"
# Optional: future remote assets fetching support
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"], optional = true }
# Expression evaluator
evalexpr = "11"

[target.'cfg(target_os = "ios")'.dependencies]
core-graphics = "*"
objc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
jni_fn = "0.1"
ndk-sys = "0.6.0+11769913"
ndk = "0.9.0"
ndk-context = "*"
log-panics = "*"


[profile.dev]
opt-level = 1 # 1 for minimal optimization and good debugging.
