[package]
name = "vysma-cloud"
version = "0.1.0"
edition = "2024"

[lib]
name = "vysma_cloud"
crate-type = ["rlib"]

[features]
default = []
server = []

[dependencies]
anyhow = "1"
unofficial_appwrite = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1" 