[package]
name = "vysma-platform"
version = "0.1.0"
edition = "2024"

[lib]
name = "vysma_platform"
crate-type = ["rlib"]

[features]
android = []
ios = []

[dependencies]
bevy = { version = "0.16", default-features = true }
ndk = { version = "0.9.0", optional = true }
ndk-sys = { version = "0.6.0+11769913", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9.0" }
ndk-sys = { version = "0.6.0+11769913" } 